# QtSrcRead

./: README.md
Code/SrcCode/qtbase/config.tests/: cmake_zstd.zstd
Code/SrcCode/qtbase/config.tests/arch/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Code/SrcCode/qtbase/config.tests/binary_for_strip_built/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Code/SrcCode/qtbase/config.tests/x86_simd_avx512vbmi2/: CMakeCache.txt  build.ninja  cmake_install.cmake
Code/SrcCode/qtbase/config.tests/x86_simd_vaes/: CMakeCache.txt  build.ninja  cmake_install.cmake
Code/SrcCode/qtbase/lib/cmake/Qt6/: Qt6ConfigVersionImpl.cmake  qt.toolchain.cmake
Code/SrcCode/qtbase/lib/pkgconfig/: preliminary_pc_for_Qt6Platform_step1.pc
Code/SrcCode/qtbase/src/corelib/kernel/: qobject.h
Code/SrcCode/qtbase/src/tools/syncqt/configure_time_bins/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
